create landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="../public/style.css/landing.css">
+    <link rel="stylesheet" href= "styles/landing.css">
 </head>
 <body>
     <div class="main"> 
@@ -17,10 +17,10 @@
             <h2>Choose your role</h2>
         </div>
         <div class="box">
-            <div class="student"></div>
-            <div class="teacher"></div>
+            <div class="student"><img src="img/student2.jpg"></div>
+            <div class="teacher"><img src="img/teacher1.jpg"></div>
         </div>
-        <div class="button"><button>Next</button></div>
+        <div class="button"><button class="but">Next</button></div>
     </div></div>
    
     
