--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -1,99 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10&family=Londrina+Outline&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*{
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-.main{
-    display: flex;
-    flex-direction: column;
-    
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&family=Londrina+Outline&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-.logo{
-    display: flex;
-    flex-direction: row;
-    margin-left: 3rem;
-    font-size: 2rem;
-    margin-top:1.5rem ;
-    font-weight: 900;
-    color: hsl(204, 74%, 12%);
-   }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
+.main {
+  display: flex;
+  flex-direction: column;
 }
-.heading{
-    font-size: 1.5em;
-    display: flex;
-   flex-direction:column ;
-   justify-content: center;
-   align-items: center;
-
+.logo {
+  display: flex;
+  flex-direction: row;
+  margin-left: 3rem;
+  font-size: 2rem;
+  margin-top: 1.5rem;
+  font-weight: 900;
+  color: hsl(204, 74%, 12%);
 }
-.box{
-    -width:100%;
-    display:flex;
-    gap:3em;
-    
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.student{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border:4px solid black;
-    padding: 1em;
-    border-radius: 10%;
-    height:14rem;
-    width: 14rem;
+.heading {
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.teacher{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border:4px solid hsla(0, 0%, 0%, 0.414);
-    padding: 1em;
-    border-radius: 10%;
-    height:14rem;
-    width: 14rem;
-    
-
+.box {
+  -width: 100%;
+  display: flex;
+  gap: 3em;
 }
-img{
-    height: 10rem;
+.student {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid black;
+  padding: 1em;
+  border-radius: 10%;
+  height: 14rem;
+  width: 14rem;
+  cursor: pointer;
+}
+.teacher {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid hsla(0, 0%, 0%, 0.414);
+  padding: 1em;
+  border-radius: 10%;
+  height: 14rem;
+  width: 14rem;
+  cursor: pointer;
+}
+img {
+  height: 10rem;
+}
 
-    }
-
-.but{
-
-    margin-top:3rem ;
-    margin-bottom: 4rem;
-    /* padding: 0; */
-    /* width: 7em;
+.but {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  /* padding: 0; */
+  /* width: 7em;
     height: 4em; */
-    padding: 0.5em 1em;  /* Adjust padding for consistent button size */
-    width: auto;         /* Allow width to adjust based on text size */
-    height: auto; 
-    border: 1px solid black;
-    border-radius: 7%;
-    background-color: black;
-    color: white;
-    font-size: 1em;    /* Increase the text size */
-    text-align: center;
-    
-    
-   
-    
-    
-}  
-
-
-
-
-
-
+  padding: 0.5em 1em; /* Adjust padding for consistent button size */
+  width: auto; /* Allow width to adjust based on text size */
+  height: auto;
+  border: 1px solid black;
+  border-radius: 7%;
+  background-color: black;
+  color: white;
+  font-size: 1em; /* Increase the text size */
+  text-align: center;
+  cursor: pointer;
+}
