--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href= "styles/landing.css">
-</head>
-<body>
-    <div class="main"> 
-        <div class="logo">
-            <div>Attendify</div>
-        </div>
-        <div class="container">
+    <link rel="stylesheet" href="styles/landing.css" />
+  </head>
+  <body>
+    <div class="main">
+      <div class="logo">
+        <div>Attendify</div>
+      </div>
+      <div class="container">
         <div class="heading">
-            <h1>Welcome to Attendify</h1>
-            <h2>Choose your role</h2>
+          <h1>Welcome to Attendify</h1>
+          <h2>Choose your role</h2>
         </div>
         <div class="box">
-            <div class="student"><img src="img/student2.jpg"></div>
-            <div class="teacher"><img src="img/teacher1.jpg"></div>
+          <div class="student"><img src="img/student2.jpg" /></div>
+          <div class="teacher"><img src="img/teacher1.jpg" /></div>
         </div>
         <div class="button"><button class="but">Next</button></div>
-    </div></div>
-   
-    
-</body>
+      </div>
+    </div>
+  </body>
 </html>
