--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -9,12 +9,12 @@
   <body>
     <div class="main">
       <div class="logo">
-        <div>Attendify</div>
+        <div>ATTENDIFY</div>
       </div>
       <div class="container">
         <div class="heading">
-          <h1>Welcome to Attendify</h1>
-          <h2>Choose your role</h2>
+          <p class="title">Welcome to Attendify</p>
+          <p class="title1">Choose your role</p>
         </div>
         <div class="box">
           <div class="student"><img src="img/student2.jpg" /></div>
