added login and register routes

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -17,7 +17,7 @@
           <p class="title1">Choose your role</p>
         </div>
         <div class="box">
-          <div class="student"><img src="img/student.png" /></div>
+          <div class="student"><img src="img/student.jpg" /></div>
           <div class="teacher"><img src="img/teacher.png" /></div>
         </div>
         <div class="button"><button class="but">Next</button></div>
