--- a/views/sLogin.ejs
+++ b/views/sLogin.ejs
@@ -17,7 +17,7 @@
       <div class="hero">
         <div class="form">
           <!-- Log In Form -->
-          <form id="login-form" action="/login" method="post">
+          <form id="login-form" action="/slogin" method="post">
             <p class="log-text">Log In</p>
             <input
               type="email"
@@ -49,7 +49,7 @@
             </div>
           </form>
         </div>
-        <div class="img"><img src="/img/student.png" alt="student img" /></div>
+        <div class="img"><img src="/img/student.jpg" alt="student img" /></div>
       </div>
       <div class="footer">
         *If you do not have an account, <a href="/sRegister">click here</a> to
