--- a/views/sRegister.ejs
+++ b/views/sRegister.ejs
@@ -15,10 +15,10 @@
       </div>
       <div class="line"><p>You are a step away from something great</p></div>
       <div class="hero">
-        <div class="img"><img src="/img/student.png" alt="student img" /></div>
+        <div class="img"><img src="/img/student.jpg" alt="student img" /></div>
         <div class="form">
           <!-- Log In Form -->
-          <form id="regitration-form" action="/register" method="post">
+          <form id="regitration-form" action="/sRegister" method="post">
             <p class="log-text">Register</p>
             <input
               type="name"
@@ -44,7 +44,7 @@
             <input
               type="password"
               placeholder="Confirm Password"
-              name="password"
+              name="cpassword"
               required
               class="input"
             /><br />
