--- a/views/tLogin.ejs
+++ b/views/tLogin.ejs
@@ -17,7 +17,7 @@
       <div class="hero">
         <div class="form">
           <!-- Log In Form -->
-          <form id="login-form" action="/login" method="post">
+          <form id="login-form" action="/tlogin" method="post">
             <p class="log-text">Log In</p>
             <input
               type="email"
