--- a/views/tRegister.ejs
+++ b/views/tRegister.ejs
@@ -18,7 +18,7 @@
         <div class="img"><img src="/img/teacher.png" alt="student img" /></div>
         <div class="form">
           <!-- Log In Form -->
-          <form id="regitration-form" action="/register" method="post">
+          <form id="regitration-form" action="/tRegister" method="post">
             <p class="log-text">Register</p>
             <input
               type="name"
@@ -44,7 +44,7 @@
             <input
               type="password"
               placeholder="Confirm Password"
-              name="password"
+              name="cpassword"
               required
               class="input"
             /><br />
