--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -17,10 +17,13 @@
           <p class="title1">Choose your role</p>
         </div>
         <div class="box">
-          <div class="student"><img src="img/student.jpg" /></div>
-          <div class="teacher"><img src="img/teacher.png" /></div>
+          <a href="/sLogin"
+            ><div class="student"><img src="img/student.jpg" /></div
+          ></a>
+          <a href="/tLogin"
+            ><div class="teacher"><img src="img/teacher.png" /></div
+          ></a>
         </div>
-        <div class="button"><button class="but">Next</button></div>
       </div>
     </div>
   </body>
