--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -10,7 +10,7 @@
   flex-direction: column;
 }
 .logo {
- 
+  cursor: pointer;
   font-family: "Orbitron", sans-serif;
   margin-left: 3rem;
   font-size: 2.3rem;
