--- a/views/roles.ejs
+++ b/views/roles.ejs
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ATTENDIFY</title>
-    <link rel="stylesheet" href="styles/landing.css" />
+    <link rel="stylesheet" href="styles/roles.css" />
   </head>
   <body>
     <div class="main">
       <div class="logo">
         <div>ATTENDIFY</div>
       </div>
+      <hr>
       <div class="container">
         <div class="heading">
           <p class="title">Welcome to Attendify</p>
