--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -8,7 +8,7 @@
   font-weight: 400;
   font-style: normal;
 }
-
+ 
 body {
   background-color: #ffffff;
 } 
@@ -19,6 +19,7 @@ body {
   font-size: 2rem;
   font-weight: 600;
   color: #00233b;
+  margin: 1.1rem 0rem;
   margin-left: 5rem;
   font-size: 2rem;
   text-shadow: 1px 1px 1px;
@@ -27,6 +28,7 @@ body {
 hr {
   opacity: 0.4;
 }
+
 
 .message {
   display: flex;
